Fix: cards font-size and alignment

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -66,7 +66,6 @@ body {
 .card-today {
   height: 16em;
   background-color: var(--neutral-800);
-  margin: 1.5em 0;
   align-items: center;
 }
 
@@ -85,6 +84,7 @@ body {
 
 main {
   max-width: 100vw;
+  padding: 0 1.5em;
 }
 
 @media(max-width: 375px) {
@@ -102,14 +102,13 @@ main {
 
 
 .weather-cards-group {
-
   padding: 1.5em 0;
-
   min-height: 100px;
+  justify-content: space-between;
   gap: 24px;
 }
 
-@media(max-width: 587px) {
+@media(max-width: 517px) {
   .weather-cards-group {
     justify-content: center;
   }
@@ -117,7 +116,7 @@ main {
 
 
 .card {
-  max-width: 184px;
+  max-width: min(184px, 30vh);
   height: 7.5rem;
   padding: 1rem 0 .75rem 1rem;
 
@@ -131,7 +130,7 @@ main {
 }
 
 .card p {
-  font-size: 24px;
+  font-size: 32px;
   color: var(--neutral);
 }
 
@@ -308,6 +307,10 @@ footer {
 }
 .rounded-3 {
   border-radius: var(--rounded-3);
+}
+
+.margin-1 {
+  margin: 1.5em 0;
 }
 
 /* ======================================================== */
